--- a/css/index.css
+++ b/css/index.css
@@ -35,19 +35,21 @@ body {
     position: relative;
     overflow: hidden;
 }
-
+.swiper-slide1 div{
+    opacity: 0;
+}
 #page1 .quan {
     width: 0rem;
     height: 0rem;
     background: black;
-    border: 2px solid white;
+    border: 1.5px solid white;
     border-radius: 50%;
     position: absolute;
     opacity: 0;
 }
 
 #page1 .box {
-
+    opacity: 1;
     width: 0rem;
     height: 0rem;
     background: white;
@@ -100,9 +102,24 @@ body {
 
 #page1 .box3 span {
     position: absolute;
-    left: 100%;
+    left: 92%;
     top: 0;
     color: white;
+    opacity: 0;
+    animation: xiansp .5s 4.6s both;
+}
+
+
+@keyframes xiansp {
+    0% {
+        left: 92%;
+        opacity: 0;
+    }
+
+    100% {
+        left: 100%;
+        opacity: 1;
+    }
 }
 
 @keyframes quan1 {
@@ -276,7 +293,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-
+    opacity: 1;
 }
 
 #page3 .shangtian {
@@ -322,7 +339,7 @@ body {
     color: black;
     position: absolute;
     overflow: hidden;
-
+    opacity: 1;
     font-size: .45rem;
     font-weight: 500;
     text-align: center;
@@ -347,6 +364,16 @@ body {
     left: 50%;
     transform: translateX(-50%);
     animation: xiadi3 1.5s 2.7s both;
+}
+.swiper-slide3 img{
+    opacity: 0;
+}
+.swiper-slide3 P{
+    opacity: 0;
+}
+.swiper-slide3 div{
+    opacity: 0;
+
 }
 
 @keyframes xiadi1 {
@@ -461,7 +488,7 @@ body {
     background: white;
     color: black;
     font-size: .45rem;
-    animation: shou .1s .6s both;
+    animation: shou .1s .6s both;opacity: 1;
 }
 
 @keyframes shou {
@@ -595,16 +622,19 @@ body {
 }
 
 @keyframes xian {
-    1%{
+    1% {
         opacity: 1;
     }
+
     100% {
-        transform: scale(3) rotate(-45deg);
+        transform: scale(3) rotate(45deg);
         opacity: 0;
     }
 }
 
-
+.swiper-slide2 div{
+    opacity: 0;
+}
 #page2 .blbl {
     position: absolute;
     top: 50%;
