--- a/css/index.css
+++ b/css/index.css
@@ -333,6 +333,7 @@ body {
 #page3 .box3 {
     width: 3.0rem;
     height: 0.9rem;
+    line-height: 0.9rem;
     background: white;
     border: 2px solid transparent;
     border-radius: 3px;
@@ -642,15 +643,40 @@ body {
     transform: translate(-50%, -50%);
     width: 5.5rem;
     height: 5.5rem;
-    text-align: center;
+    line-height: 0.85rem;
+    /* text-align: center; */
     color: white;
-    font-size: .45rem;
+    font-size: .42rem;
     animation: xian2 .1s 1.6s both;
     opacity: 0;
 }
 
 @keyframes xian2 {
     100% {
+        opacity: 1;
+    }
+}
+#page4 .blbl {
+    position: absolute;
+    top: 9rem;
+    left: 4.5rem;
+    font-size: 0.4rem;
+    /* transform: translate(-50%, -50%); */
+    /* width: 5.5rem; */
+    /* height: 5.5rem; */
+    line-height: 0.85rem;
+    /* text-align: center; */
+    color: black;
+    z-index: 999;
+}
+.page4bj{
+    width: 100%;
+    height: 100%;
+    animation: xian1 0s both;
+    opacity: 0;
+}
+@keyframes xian1{
+    100%{
         opacity: 1;
     }
 }
