--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,8 @@ body {
     overflow: hidden;
     /* max-width: 1024px; */
     /* max-height: 1366px; */
+    max-width: 420px;
+    max-height: 799px;
     margin: 0 auto;
 }
 
